Fix problems patching modules with dependencies